--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer" id="foot">
+    <footer class="footer copyright" id="foot">
         <div class="social-media-links">
         <i class="fab fa-facebook fa-3x"></i>
         <i class="fab fa-twitter fa-3x"></i>
